[package]
name = "supplied"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
poise = "0.6.1"
serenity = "0.12.1"
tailcall = "1.0.1"
tokio = { version = "1.36.0", features = ["full"] }
